--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <body>
     <h1 data-testid="title">Hello</h1>
-    <div id="root" data-testid="root"></div>
+    <div id="root"></div>
 
-    <script src="./examples/client.js"></script>
+    <script type="module" src="./examples/client.jsx"></script>
   </body>
 </html>
